tests/Aspire.Hosting.Kubernetes.Tests/Snapshots/KubernetesPublisherTests.KubernetesIngressAndGatewayRouteToServicePortForDistinctPorts#02.verified.yaml
---
apiVersion: "gateway.networking.k8s.io/v1"
kind: "HTTPRoute"
metadata:
  name: "gateway-route"
spec:
  parentRefs:
    - name: "gateway"
  rules:
    - matches:
        - path:
            type: "PathPrefix"
            value: "/api"
      backendRefs:
        - name: "api-service"
          port: 9002
